Fixed the overflow issue occured due to aos attribute in footer

--- a/assets/styling/main.css
+++ b/assets/styling/main.css
@@ -828,6 +828,9 @@ body footer.footer .footer-inner-wrap .content-area .copyright-section ul.copyri
   gap: 15px;
   flex: 1;
 }
+body footer.footer .footer-inner-wrap .content-area .copyright-section ul.copyright-menu-list li.copyright-menu-itm a.menu-link {
+  white-space: nowrap;
+}
 
 /* Pages */
 body main.main-content section {
